--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -14,6 +14,10 @@
   font-style: normal;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: GowunBatang, Arial, Helvetica, sans-serif;
   top: 0;
