fix: Ajustes no componente de contato

--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1,7 +1,6 @@
 @import "./partials/_variables";
 @import "./partials/_typography";
-
-
+@import "./partials/_form";
 
 html {
   scroll-behavior: smooth;
