--- a/src/assets/css/partials/_variables.scss
+++ b/src/assets/css/partials/_variables.scss
@@ -3,7 +3,10 @@
   --content-container: 750px;
 
   --primary: #536b80;
+  --primary-surface: #b0b9c3;
   --text-muted: #8c8c8c;
+
+  --density: 30px;
 }
 
 // ╔══════════════════════════╗
