fix: Ajustes no estilo dos botões

--- a/src/assets/css/partials/_variables.scss
+++ b/src/assets/css/partials/_variables.scss
@@ -3,6 +3,7 @@
   --content-container: 750px;
 
   --primary: #536b80;
+  --primary-variant: #667f95;
   --primary-surface: #b0b9c3;
   --text-muted: #8c8c8c;
 
