--- a/src/assets/css/partials/_form.scss
+++ b/src/assets/css/partials/_form.scss
@@ -10,12 +10,14 @@ input[type='text'], input[type='email'], textarea {
 
 input[type='text']:focus, input[type='email']:focus,
 textarea:focus {
-  border-color: #42b883;
+  border-color: var(--primary);
 }
 
 button {
-  background-color: #42b883;
+  background-color: var(--primary);
+  font-family: inherit;
   color: #fff;
+  margin: 0 auto;
   border: none;
   border-radius: 40px;
   padding: 1rem 2.5rem;
@@ -27,6 +29,6 @@ button {
 }
 
 button:hover {
-  background-color: #2f8f6f;
+  background-color: var(--primary-variant);
   transform: translateY(-2px);
 }
