feat: Ajustes na seção de depoimentos

--- a/src/assets/css/partials/_variables.scss
+++ b/src/assets/css/partials/_variables.scss
@@ -1,6 +1,7 @@
 :root {
   --header-height: 80px;
   --content-container: 750px;
+  --scrollbar-color: rgba(48, 48, 48, 0.3) transparent;
 
   --primary: #536b80;
   --primary-variant: #667f95;
