--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -1,6 +1,7 @@
 @import "./partials/_variables";
 @import "./partials/_typography";
 @import "./partials/_form";
+@import "./partials/_scroll";
 
 html {
   scroll-behavior: smooth;
